- Trees no longer have an angle setting (as this is ignored when a random tree rotation mod is active)
- Increase offset slider range and ensure values are properly updated when outside visible range
- Provide ability to change m_fixedHeight flags on building replacements
- Building and network special flags are now automatically regenerated on replacement
- Add additional check for invalid savegame data on deserialization


Version 0.8.6.3 -

- Update Extended Managers Library API (EML 0.9.7)
- Fix map prop replacement EML compatibility


Version 0.8.6.2 -

- Update Extended Managers Library API (EML 0.8.9)


Version 0.8.6.1 hotfix -

- Fix regression: custom configuration directory not being detected


Version 0.8.6 -

- Add option to make wires in networks (power lines and railway catenaries) more realistically sized
- Move settings and global configuration file locations from application directory to user directory


Version 0.8.5 -

- Add creator name display and sorting to scaling panel
- Add button to clean current config of any references to unloaded prefabs
- Update EManagersLib.API


Version 0.8.4.2 hotfix -

- Fix sliders not responding to mouse dragging after scroll wheel is used
- Fix scale slider values not properly resetting on selection change


Version 0.8.4.1 hotfix -

- Fix PropAPI initialization not occuring for players without Move It (Beta version) and/or Prop Anarchy installed


Version 0.8.4 -

- Convert to new Extended Managers Library API (compatible with EML 0.8+)


Version 0.8.3 -

- Fix inter-thread communication during map (standalone) prop and tree replacement


Version 0.8.2 -

- Fix fallback to new empty configuration record where no configuration file currently exists


Version 0.8.1 -

- Improve configuration file management
- Improve hotkey response


Version 0.8 -

- Add individual network prop replacement
- Add Universal UI (UUI) button
- Add proper escape key handling
- Fix text in configuration panel 'Load and apply' button